--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>🗺Homework 12</title>
-    <!-- <link
-      href="node_modules/pnotify/dist/PNotifyBrightTheme.css"
-      rel="stylesheet"
-      type="text/css"
-    /> -->
+
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -20,7 +16,7 @@
 
   <body>
     <h1 class="text">Поиск данных</h1>
-    <input type="text" name="query" class="input" />
+    <input type="text" name="query" class="input" onfocus="this.value=''" />
     <div class="content"></div>
   </body>
 </html>
